--- a/index.html
+++ b/index.html
@@ -1,16 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <div class="container mt-3 overflow-auto ">
+        <div id="mainContainer"></div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-6">
+                <div class="input-group mb-3">
+                    <input type="number" id="user1" type="text" class="form-control" placeholder="User1 amount"
+                        aria-label="Recipient's username" aria-describedby="button-addon2">
+                    <button class="btn btn-outline-secondary" type="button" id="button-addon2"
+                        onclick="addBid('user1')">Place Bid</button>
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="input-group mb-3">
+                    <input type="number" id="user2" type="text" class="form-control" placeholder="User2 amount"
+                        aria-label="Recipient's username" aria-describedby="button-addon2">
+                    <button class="btn btn-outline-secondary" type="button" id="button-addon2"
+                        onclick="addBid('user2')">Place Bid</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container mt-2">
+        <button type="button" class="btn btn-success" onclick="save()">Save Bids</button>
+        <button type="button" class="btn btn-primary" onclick="getSave()">Import Save</button>
+        <button type="button" class="btn btn-warning" onclick="clearSave()">Delete Saved Bids</button>
+    </div>
 
 
 
+    <!-- scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
+        </script>
+    <script src="./js/util.js"></script>
     <script src="./js/main.js"></script>
 </body>
+
 </html>
