--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container mt-3 overflow-auto ">
         <div id="mainContainer"></div>
     </div>
-    <div class="container">
+    <div class="container mt-3">
         <div class="row">
             <div class="col-6">
                 <div class="input-group mb-3">
