--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div class="container mt-3">
         <div class="row">
-            <div class="col-6">
+            <div class="col-12 col-sm-6">
                 <div class="input-group mb-3">
                     <input type="number" id="user1" type="text" class="form-control" placeholder="User1 amount"
                         aria-label="Recipient's username" aria-describedby="button-addon2">
@@ -25,7 +25,7 @@
                         onclick="addBid('user1')">Place Bid</button>
                 </div>
             </div>
-            <div class="col-6">
+            <div class="col-12 col-sm-6">
                 <div class="input-group mb-3">
                     <input type="number" id="user2" type="text" class="form-control" placeholder="User2 amount"
                         aria-label="Recipient's username" aria-describedby="button-addon2">
